--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@angular/animations": "^7.2.14",
     "@angular/cdk": "^7.3.7",
+    "@angular/cli": "~7.3.8",
+    "@angular/compiler-cli": "~7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -33,6 +35,7 @@
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.1",
     "tslib": "^1.9.0",
+     "typescript": "~3.2.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
